[gd_scene load_steps=15 format=2]

[ext_resource path="res://producto/scripts/Interfaz.gd" type="Script" id=1]
[ext_resource path="res://producto/assets/img/GUI/Barra_vida/Barra_VIDA_fondo.png" type="Texture" id=2]
[ext_resource path="res://producto/assets/img/GUI/Barra_exp/Personaje.png" type="Texture" id=3]
[ext_resource path="res://producto/assets/img/GUI/Barra_vida/GUI - copia - copia.png" type="Texture" id=4]
[ext_resource path="res://producto/assets/img/GUI/Barra_exp/Barra_EXP_fondo.png" type="Texture" id=5]
[ext_resource path="res://producto/assets/img/GUI/Barra_exp/GUI - copia (2).png" type="Texture" id=6]
[ext_resource path="res://producto/assets/img/GUI/Barra_exp/Personaje - copia.png" type="Texture" id=7]
[ext_resource path="res://producto/assets/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://producto/assets/img/GUI/Barra_exp/GUI - copia (3).png" type="Texture" id=9]
[ext_resource path="res://producto/assets/img/GUI/Barra_exp/GUI - copia (3) - copia.png" type="Texture" id=10]
[ext_resource path="res://producto/assets/img/jugador/skins/Black/head.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 21
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 8 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_left = 75.0
margin_top = -5.0
margin_right = 115.0
margin_bottom = 35.0

[node name="Barra_vida" type="TextureProgress" parent="Control"]
margin_left = 20.0
margin_top = 15.0
margin_right = 72.0
margin_bottom = 22.0
rect_scale = Vector2( 6, 4 )
value = 50.0
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 4 )

[node name="Barra_exp" type="TextureProgress" parent="Control"]
margin_left = 20.0
margin_top = 43.0
margin_right = 65.0
margin_bottom = 83.0
rect_scale = Vector2( 6, 4 )
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="Control"]
margin_left = 23.0
margin_top = 68.0
margin_right = 163.0
margin_bottom = 99.0
texture = ExtResource( 7 )
expand = true

[node name="TextureRect2" type="TextureRect" parent="Control"]
margin_left = -64.0
margin_top = 15.0
margin_right = 23.0
margin_bottom = 99.0
texture = ExtResource( 3 )
expand = true

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( -17.25, 49.5 )
scale = Vector2( 1.70833, 1.70833 )
texture = ExtResource( 11 )

[node name="Puntaje" type="Label" parent="."]
margin_left = 132.0
margin_top = 69.5
margin_right = 225.0
margin_bottom = 90.5
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="Nivel" type="Label" parent="."]
margin_left = 19.0
margin_top = 68.0
margin_right = 88.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 2 )
text = "aaaaaa"

[node name="Vida" type="Label" parent="."]
margin_left = 104.0
margin_top = 18.0
margin_right = 167.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 3 )
text = "100/100"

[node name="Btn_pausa" type="TextureButton" parent="."]
margin_left = 960.0
margin_top = 10.0
margin_right = 1012.0
margin_bottom = 62.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 10 )
expand = true

[node name="Pos_pausa" type="Position2D" parent="."]

[connection signal="pressed" from="Btn_pausa" to="." method="_on_Btn_pausa_pressed"]
